--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "@emotion/core": "^10.0.15",
+    "@emotion/styled": "^10.0.15",
     "customize-cra": "^0.5.0",
+    "immutability-helper": "^3.0.1",
     "react": "^16.9.0",
     "react-app-rewired": "^2.1.3",
+    "react-dnd": "^9.3.4",
+    "react-dnd-html5-backend": "^9.3.4",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.0"
   },
