--- a/webapp/package.json
+++ b/webapp/package.json
@@ -7,12 +7,10 @@
     "@emotion/styled": "^10.0.15",
     "customize-cra": "^0.5.0",
     "immer": "^3.2.0",
-    "immutability-helper": "^3.0.1",
     "react": "^16.9.0",
     "react-app-rewired": "^2.1.3",
     "react-autosize-textarea": "^7.0.0",
-    "react-dnd": "^9.3.4",
-    "react-dnd-html5-backend": "^9.3.4",
+    "react-beautiful-dnd": "^11.0.5",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.0"
   },
