--- a/webapp/package.json
+++ b/webapp/package.json
@@ -2,17 +2,23 @@
   "name": "ooux",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000",
   "dependencies": {
+    "@emotion/babel-preset-css-prop": "^10.0.14",
     "@emotion/core": "^10.0.15",
     "@emotion/styled": "^10.0.15",
+    "@reach/router": "^1.2.1",
     "customize-cra": "^0.5.0",
+    "formik": "^1.5.8",
     "immer": "^3.2.0",
     "react": "^16.9.0",
     "react-app-rewired": "^2.1.3",
     "react-autosize-textarea": "^7.0.0",
     "react-beautiful-dnd": "^11.0.5",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.0"
+    "react-scripts": "3.1.0",
+    "react-toasts": "^3.0.4",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -38,7 +44,6 @@
     ]
   },
   "devDependencies": {
-    "@emotion/babel-preset-css-prop": "^10.0.14",
     "flow-bin": "^0.104.0",
     "flow-typed": "^2.6.1",
     "jest": "^24.8.0",
