--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.0",
     "react-toasts": "^3.0.4",
+    "swr": "^0.1.9",
     "uuid": "^3.3.3",
     "yup": "^0.27.0"
   },
