--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,6 +16,7 @@
     "react-autosize-textarea": "^7.0.0",
     "react-beautiful-dnd": "^11.0.5",
     "react-dom": "^16.12.0",
+    "react-error-boundaries": "^1.1.4",
     "react-scripts": "3.1.0",
     "react-toasts": "^3.0.6",
     "swr": "^0.1.12",
