--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,15 +4,12 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
-    "@emotion/babel-preset-css-prop": "^10.0.23",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
     "@reach/router": "^1.2.1",
-    "customize-cra": "^0.5.0",
     "formik": "^1.5.8",
     "immer": "^3.3.0",
     "react": "^16.12.0",
-    "react-app-rewired": "^2.1.5",
     "react-autosize-textarea": "^7.0.0",
     "react-beautiful-dnd": "^11.0.5",
     "react-dom": "^16.12.0",
@@ -47,11 +44,14 @@
     ]
   },
   "devDependencies": {
+    "@emotion/babel-preset-css-prop": "^10.0.23",
+    "customize-cra": "^0.9.1",
     "flow-bin": "^0.104.0",
     "flow-typed": "^2.6.2",
     "jest": "^24.8.0",
     "jest-axe": "^3.2.0",
     "jest-dom": "^4.0.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "react-app-rewired": "^2.1.5"
   }
 }
