--- a/webapp/.flowconfig
+++ b/webapp/.flowconfig
@@ -1,5 +1,4 @@
 [ignore]
-<PROJECT_ROOT>/node_modules/react-beautiful-dnd/.*
 
 [include]
 
@@ -11,7 +10,7 @@ sketchy-null=warn
 [options]
 include_warnings=true
 module.system.node.resolve_dirname=node_modules
-module.system.node.resolve_dirname=./src
+module.system.node.resolve_dirname=src
 
 [strict]
 nonstrict-import
