--- a/webapp/package.json
+++ b/webapp/package.json
@@ -7,14 +7,14 @@
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
     "@reach/router": "^1.2.1",
-    "formik": "^1.5.8",
-    "immer": "^3.3.0",
+    "formik": "^2.0.6",
+    "immer": "^5.0.0",
     "react": "^16.12.0",
     "react-autosize-textarea": "^7.0.0",
     "react-beautiful-dnd": "^12.1.1",
     "react-dom": "^16.12.0",
     "react-error-boundaries": "^1.1.4",
-    "react-scripts": "3.1.0",
+    "react-scripts": "^3.2.0",
     "react-toasts": "^3.0.6",
     "swr": "^0.1.12",
     "uuid": "^3.3.3",
@@ -48,7 +48,7 @@
     "customize-cra": "^0.9.1",
     "flow-bin": "^0.112.0",
     "flow-typed": "^2.6.2",
-    "jest": "^24.8.0",
+    "jest": "^24.9.0",
     "jest-axe": "^3.2.0",
     "jest-dom": "^4.0.0",
     "prettier": "^1.19.1",
