--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,6 +14,7 @@
     "react-beautiful-dnd": "^12.1.1",
     "react-dom": "^16.12.0",
     "react-error-boundaries": "^1.1.4",
+    "react-icons": "^3.8.0",
     "react-scripts": "^3.2.0",
     "react-toasts": "^3.0.6",
     "swr": "^0.1.12",
