Fixed production build to use pip tools

--- a/docker/prod/Dockerfile
+++ b/docker/prod/Dockerfile
@@ -3,8 +3,9 @@ FROM python:3.7 as base
 ENV PYTHONUNBUFFERED 1
 
 WORKDIR /app
-RUN pip install pipenv
-COPY api/Pipfile* ./
-RUN pipenv install --system --deploy --keep-outdated
+RUN pip install pip-tools
+COPY ./api/requirements.in ./
+RUN pip-compile requirements.in
+RUN pip-sync
 COPY ./api ./
 RUN python manage.py collectstatic --noinput
