--- a/docker/prod/Dockerfile.web
+++ b/docker/prod/Dockerfile.web
@@ -11,9 +11,10 @@ RUN npm run build
 FROM python:3.7 as django
 
 WORKDIR /app
-RUN pip install pipenv
-COPY api/Pipfile* ./
-RUN pipenv install --system --deploy --keep-outdated
+RUN pip install pip-tools
+COPY ./api/requirements.in ./
+RUN pip-compile requirements.in
+RUN pip-sync
 
 COPY ./api ./
 RUN python manage.py collectstatic --noinput
