--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
+    "@emotion/babel-preset-css-prop": "^10.0.23",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
     "@reach/router": "^1.2.1",
+    "customize-cra": "^0.9.1",
     "formik": "^2.0.6",
     "immer": "^5.0.0",
     "react": "^16.12.0",
+    "react-app-rewired": "^2.1.5",
     "react-autosize-textarea": "^7.0.0",
     "react-beautiful-dnd": "^12.1.1",
     "react-dom": "^16.12.0",
@@ -45,14 +48,11 @@
     ]
   },
   "devDependencies": {
-    "@emotion/babel-preset-css-prop": "^10.0.23",
-    "customize-cra": "^0.9.1",
     "flow-bin": "^0.112.0",
     "flow-typed": "^2.6.2",
     "jest": "^24.9.0",
     "jest-axe": "^3.2.0",
     "jest-dom": "^4.0.0",
-    "prettier": "^1.19.1",
-    "react-app-rewired": "^2.1.5"
+    "prettier": "^1.19.1"
   }
 }
